# magink

contract/: Cargo.toml  package.json
contract/magink/: Cargo.toml  lib.rs
contract/wizard/: cargo.toml  lib.rs
contract/wizard_tool/: Cargo.toml
frontend/: additional_packages.txt  config-overrides.js  package.json
frontend/src/components/: Form.tsx  FormContainer.tsx
