[package]
name = "magink"
version = "0.1.0"
authors = ["Rahul"]
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
openbrush = { version = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
wizard = { path = "../wizard", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[dev-dependencies]
ink_e2e = "4.2.1"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "wizard/std",
]
ink-as-dependency = []
e2e-tests = []